@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+12-Sep-2003
+~~~~~~~~~~~
+Don't create a corrupted pinboard/panel file if a non-UTF8 pathname is
+dragged to it (reported by Eugeni Andreechtchev).
+
 05-Sep-2003
 ~~~~~~~~~~~
 Added Czech translation (Jan Provaznik).
